--- a/style.css
+++ b/style.css
@@ -107,13 +107,13 @@
 	opacity: 0.3;
 }
 
-.btn {
+/* .btn {
 	display: flex;
 	flex-direction: row;
 	float: right;
 	margin-top: -35px;
 	margin-right: 25%;
-}
+} */
 
 .about-li {
 	list-style-type: none;
@@ -210,7 +210,7 @@ i {
 	flex-wrap: wrap;
 }
 
-.flex-container > div {
+.flex-container>div {
 	background-color: #f1f1f1;
 	width: 100px;
 	margin: 10px;
@@ -230,6 +230,7 @@ i {
 
 #main-footer {
 	background-color: #a9a9a9;
+	margin-top: 2px;
 }
 
 #footer-cards {
@@ -273,6 +274,15 @@ i {
 #disclaimer-footer {
 	padding: 5px;
 	font-size: 12.5px;
+}
+
+.d-flex {
+	display: flex !important;
+}
+
+.list-unstyled {
+	padding-left: 0;
+	list-style: none;
 }
 
 @media only screen and (max-width: 990px) {
